<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.assignment.cccandroidtest.viewmodels.MainFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".fragments.MainFragment">

        <ImageView
            android:id="@+id/personDp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/person_dp"
            android:src="@drawable/ic_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/companyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@id/address"
            app:layout_constraintStart_toEndOf="@+id/personDp"
            app:layout_constraintTop_toTopOf="@+id/personDp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/personDp"
            app:layout_constraintStart_toEndOf="@+id/personDp"
            app:layout_constraintTop_toBottomOf="@id/companyName" />

        <TextView
            android:id="@+id/estDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/est_details"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personDp" />


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/estDetails" />

        <TextView
            android:id="@+id/estNumberTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/est_number"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/estNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/estNumberTitle" />

        <TextView
            android:id="@+id/createdTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/created"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/estNumber" />

        <TextView
            android:id="@+id/created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createdTitle" />


        <TextView
            android:id="@+id/requesterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/requester"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/created" />

        <TextView
            android:id="@+id/requester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requesterTitle" />


        <TextView
            android:id="@+id/revisionNumberTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/revision_number"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/estNumberTitle"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/revisionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@id/revisionNumberTitle"
            app:layout_constraintTop_toBottomOf="@+id/revisionNumberTitle" />


        <TextView
            android:id="@+id/createdByTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/created_by"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="@+id/revisionNumberTitle"
            app:layout_constraintTop_toBottomOf="@+id/revisionNumber" />

        <TextView
            android:id="@+id/createdBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@id/createdByTitle"
            app:layout_constraintTop_toBottomOf="@+id/createdByTitle" />

        <TextView
            android:id="@+id/contactTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/contact"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="@+id/createdByTitle"
            app:layout_constraintTop_toBottomOf="@+id/createdBy" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@id/contactTitle"
            app:layout_constraintTop_toBottomOf="@+id/contactTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>